# libharness

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  LICENSE  TODO.md
docs/: DOMAIN.md  README.md  explain-tool.md  honcho-transport-notes.md  pique-transport-notes.md
docs/decisions/: 001-bootstrap.md  002-session-model-context-and-honcho.md  003-single-session-per-context.md  004-core-as-plumbing.md  005-testing-fuzzing-valgrind.md  006-dialectic-multi-context-testing.md  007-opaque-interfaces-and-bindings.md  008-lua-policy-layer.md
examples/: CMakeLists.txt  LICENSE  dialectic_agents.c  harness_example.c
include/: harness.h
scripts/: run_valgrind.sh
src/: harness.c  harness_extra.c  harness_internal.h  harness_policy.c  honcho_interface.c  lua_bindings.c  openai_processor.c  pique_integration.c
tests/: CMakeLists.txt  fuzz_harness.c  harness_smoke_test.c  test_dialectic_honcho.c  test_dialectic_session.c  test_explain_tool.c  test_history_stream.c  test_policy_pique.c  test_response_normalize.c  test_vector_scoring.c
