cmake_minimum_required(VERSION 3.20)

add_executable(harness_smoke_test harness_smoke_test.c)
target_link_libraries(harness_smoke_test PRIVATE harness)
target_include_directories(harness_smoke_test PRIVATE ../include)
add_test(NAME harness_smoke COMMAND harness_smoke_test)

add_executable(test_dialectic_session test_dialectic_session.c)
target_link_libraries(test_dialectic_session PRIVATE harness)
target_include_directories(test_dialectic_session PRIVATE ../include)
add_test(NAME dialectic_session COMMAND test_dialectic_session)

add_executable(test_dialectic_honcho test_dialectic_honcho.c)
target_link_libraries(test_dialectic_honcho PRIVATE harness)
target_include_directories(test_dialectic_honcho PRIVATE ../include)
add_test(NAME dialectic_honcho COMMAND test_dialectic_honcho)

add_executable(test_history_stream test_history_stream.c)
target_link_libraries(test_history_stream PRIVATE harness)
target_include_directories(test_history_stream PRIVATE ../include)
add_test(NAME history_stream COMMAND test_history_stream)

find_package(Lua 5.4 QUIET)
add_executable(test_policy_pique test_policy_pique.c)
target_link_libraries(test_policy_pique PRIVATE harness)
target_include_directories(test_policy_pique PRIVATE ../include)
if(LUA_FOUND)
  target_include_directories(test_policy_pique PRIVATE ${LUA_INCLUDE_DIR})
  target_link_libraries(test_policy_pique PRIVATE ${LUA_LIBRARIES})
endif()
add_test(NAME policy_pique COMMAND test_policy_pique)

add_executable(test_response_normalize test_response_normalize.c)
target_link_libraries(test_response_normalize PRIVATE harness)
target_include_directories(test_response_normalize PRIVATE ../include)
add_test(NAME response_normalize COMMAND test_response_normalize)
